# dynamic_data_reduction

./: .gitignore  README.md  annot.py  ddr-coffea.py  ddr.py  ddr_coffea.py  ddr_cortado.py  dynmapred.py  environment.yml  factory.json  mcor.py  mdv3.py  mdv5.py  preprocess.py  preprocess_cfg.py  preprocess_json.py  pyproject.toml  simple-example.py  with_oasis_certs
coffea/nanoevents/methods/: vector.py
coffea/nanoevents/schemas/: nanoaod.py
examples/coffea_processor/: data.json  example.py  example_with_preprocess.py  preprocess_example.py  preprocessed.json
examples/cortado/: ddr_cortado.py  factory.json  with_oasis_certs
examples/misc/: mdv3.py  mdv3_fns.py  mdv5.py  preprocess.py  preprocess_cfg.py  preprocess_json.py
examples/quick_start/: quick.py
examples/simple/: simple-example.py
src/ddr/: __init__.py  ddr.py  ddr_coffea.py  ddr_cortado.py  main.py
src/dynamic_data_reduction/: __init__.py  _version.py  coffea_dataset_tools.py  ddr_coffea.py  main.py
tests/: README_INTEGRATION_TESTS.md  test_ddr.py  test_ddr_coffea.py  test_environment_and_simple_example.sh  test_integration_simple_example.py
