[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ddr"
dynamic = ["version"]
description = "Dynamic MapReduce framework for data processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mapreduce", "data-processing", "distributed-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    # Add your dependencies here
    # "numpy>=1.20.0",
    # "pandas>=1.3.0",
    # "coffea>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
ddr = "ddr.ddr:main"

[project.urls]
Homepage = "https://github.com/yourusername/ddr"
Repository = "https://github.com/yourusername/ddr.git"
Documentation = "https://github.com/yourusername/ddr#readme"
"Bug Tracker" = "https://github.com/yourusername/ddr/issues"

[tool.setuptools_scm]
write_to = "src/ddr/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ddr --cov-report=term-missing" 