[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_data_reduction"
dynamic = ["version"]
description = "Dynamic MapReduce framework for data processing"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "B. Tovar", email = "btovar@example.com"},
]
maintainers = [
    {name = "B. Tovar", email = "btovar@example.com"},
]
keywords = ["mapreduce", "data-processing", "distributed-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "awkward>=2.8.1",
    "coffea>=2025.3.0",
    "fsspec>=2025.3.0",
    "fsspec-xrootd>=0.5.1",
    "ndcctools>=7.15.8",
    "numpy>=2.1.3",
    "rich>=13.9.4",
    "uproot>=5.6.0",
    "xrootd>=5.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
dynamic_data_reduction = "dynamic_data_reduction.main:main"

[project.urls]
Homepage = "https://github.com/btovar/dynamic_data_reduction"
Repository = "https://github.com/btovar/dynamic_data_reduction.git"
Documentation = "https://github.com/btovar/dynamic_data_reduction#readme"
"Bug Tracker" = "https://github.com/btovar/dynamic_data_reduction/issues"

[tool.setuptools_scm]
write_to = "src/dynamic_data_reduction/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dynamic_data_reduction --cov-report=term-missing" 
